Changes made by rewrite-maven-plugin with org.openrewrite.java.migrate.UpgradeToJava17, org.openrewrite.java.testing.junit5.JUnit5BestPractices, org.openrewrite.java.migrate.jakarta.JakartaEE10
# Conflicts:
#	deegree-ogcapi-features/src/main/java/org/deegree/services/oaf/OafResource.java
#	deegree-ogcapi-features/src/test/java/org/deegree/services/oaf/cql2/Cql2ParserTest.java
#	pom.xml